bk_ida/gccida/c3/df_dump
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/df.c:3766:17: error: expected identifier or '('
 struct bb_info = &df_0->bbs[*( int *)( basic_block_info->data.l[i] + 88)]; 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/df.c:3770:38: error: use of undeclared identifier 'arg0'
bitmap_print( file, bb_info->rd_in, &arg0, "\n"); 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/df.c:3772:39: error: use of undeclared identifier 'arg0'
bitmap_print( file, bb_info->rd_gen, &arg0, "\n"); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/df.c:3774:40: error: use of undeclared identifier 'arg0'
bitmap_print( file, bb_info->rd_kill, &arg0, "\n"); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/df.c:3776:39: error: use of undeclared identifier 'arg0'
bitmap_print( file, bb_info->rd_out, &arg0, "\n"); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/df.c:3816:40: error: use of undeclared identifier 'arg0'
bitmap_print( file, bb_info_0->ru_in, &arg0, "\n"); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/df.c:3818:41: error: use of undeclared identifier 'arg0'
bitmap_print( file, bb_info_0->ru_gen, &arg0, "\n"); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/df.c:3820:42: error: use of undeclared identifier 'arg0'
bitmap_print( file, bb_info_0->ru_kill, &arg0, "\n"); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/df.c:3822:41: error: use of undeclared identifier 'arg0'
bitmap_print( file, bb_info_0->ru_out, &arg0, "\n"); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/df.c:3862:40: error: use of undeclared identifier 'arg0'
bitmap_print( file, bb_info_1->lr_in, &arg0, "\n"); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/df.c:3864:41: error: use of undeclared identifier 'arg0'
bitmap_print( file, bb_info_1->lr_use, &arg0, "\n"); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/df.c:3866:41: error: use of undeclared identifier 'arg0'
bitmap_print( file, bb_info_1->lr_def, &arg0, "\n"); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/df.c:3868:41: error: use of undeclared identifier 'arg0'
bitmap_print( file, bb_info_1->lr_out, &arg0, "\n"); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/df.c:3874:18: error: expected identifier or '('
 struct reg_info = df_0->regs; 
                 ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_dump/src/obj/df.o] Error 1
